kubernetes/apps/security/pocket-id-operator/instance/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: security
  annotations:
    external-dns.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: &href https://${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}
    gethomepage.dev/description: Identity Provider
    gethomepage.dev/group: Security
    gethomepage.dev/icon: pocket-id
    gethomepage.dev/name: Pocket ID
    gethomepage.dev/pod-selector: app.kubernetes.io/name=pocket-id
    gethomepage.dev/siteMonitor: http://pocket-id.security.svc.cluster.local:1411/healthz
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}`)
      middlewares:
        - name: external-with-errors
          namespace: networking
      services:
        - name: pocket-id
          port: 1411
  tls:
    secretName: pocket-id-tls-production
